fix vertical align

--- a/src/css/blocks/page.css
+++ b/src/css/blocks/page.css
@@ -20,8 +20,9 @@
   box-sizing: border-box;
 
   @media (--viewport-large) {
-    display: table-cell;
-    vertical-align: middle;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   &__content {
